fix main left border align issue

--- a/files/htdocs/css/style.css
+++ b/files/htdocs/css/style.css
@@ -549,9 +549,11 @@ header > .container > a[class="brand"]:after {
 .main > .main-left > .nav > .slide:hover {
     background: none;
 }
+
 .slide-menu {
     overflow:hidden;
-    }
+}
+
 .main > .main-left > .nav > .slide > .slide-menu > li {
     padding: 6px 50px;
     font-size:12px !important;
@@ -561,8 +563,8 @@ header > .container > a[class="brand"]:after {
 .slide-menu li:before {
     content: "";
     left: 30px;
-    top: -15px;
-    bottom: 15px;
+    top: -50%;
+    bottom: 50%;
     position: absolute;
     display: block;
     width: 1px;
@@ -581,10 +583,11 @@ header > .container > a[class="brand"]:after {
     text-shadow: 0px 1px 3px #222;
     vertical-align: middle;
 }
+
 .slide-menu li a:before {
     content: "";
     left: -20px;
-    top: 10px;
+    top: 50%;
     position: absolute;
     display: block;
     width: 15px;
@@ -1769,7 +1772,7 @@ body.lang_pl.node-main-login .cbi-value-title {
     }
 
     body {
-        font-size: 0.8rem !important;
+        font-size: 0.8rem;
     }
 
     h2 {
